--- a/data/NewYork/AirBnBDecisionTree/index.html
+++ b/data/NewYork/AirBnBDecisionTree/index.html
@@ -4,8 +4,8 @@
         <title>AirBnB Decision Tree</title>
         <meta name="description" content="Code provided from: https://github.com/marmelab/ArchitectureTree">
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/vendor/bootstrap.min.css" />
-        <link rel="stylesheet" href="css/tree.css" />
+        <link rel="stylesheet" href="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/css/vendor/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/css/tree.css" />
     </head>
     <body>
         <div class="container-fluid">
@@ -14,7 +14,7 @@
                 <h1 class="text-center">AirBnB Decision Tree</h1>
 
                 <div ng-controller="filterCtrl">
-                    <ng-include src="'js/angular.architectureTree/templates/filter.html'"></ng-include>
+                    <ng-include src="'https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/templates/filter.html'"></ng-include>
                 </div>
 
                 <div ng-controller="chartCtrl">
@@ -24,28 +24,28 @@
                 <div ng-controller="panelCtrl">
                     <div id="panel">
                         <div ng-if="detail">
-                            <ng-include src="'js/angular.architectureTree/templates/panel-detail.html'"></ng-include>
+                            <ng-include src="'https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/templates/panel-detail.html'"></ng-include>
                         </div>
 
                         <div ng-if="edit">
-                            <ng-include src="'js/angular.architectureTree/templates/panel-edit.html'"></ng-include>
+                            <ng-include src="'https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/templates/panel-edit.html'"></ng-include>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <script src="js/vendor/d3.v3.js"></script>
-        <script src="js/vendor/angular.min.js"></script>
-        <script src="js/d3.architectureTree.js"></script>
-        <script src="js/angular.architectureTree/app.js"></script>
-        <script src="js/angular.architectureTree/controllers/chart.js"></script>
-        <script src="js/angular.architectureTree/controllers/filter.js"></script>
-        <script src="js/angular.architectureTree/controllers/json-data.js"></script>
-        <script src="js/angular.architectureTree/controllers/panel.js"></script>
-        <script src="js/angular.architectureTree/controllers/undo.js"></script>
-        <script src="js/angular.architectureTree/directives/tree-chart.js"></script>
-        <script src="js/angular.architectureTree/directives/init-focus.js"></script>
-        <script src="js/angular.architectureTree/services/data.js"></script>
-        <script src="js/angular.architectureTree/services/bus.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/vendor/d3.v3.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/vendor/angular.min.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/d3.architectureTree.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/app.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/controllers/chart.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/controllers/filter.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/controllers/json-data.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/controllers/panel.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/controllers/undo.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/directives/tree-chart.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/directives/init-focus.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/services/data.js"></script>
+        <script src="https://github.com/jacksonpradolima/airbnb-ny-analysis/tree/master/data/NewYork/AirBnBDecisionTree/js/angular.architectureTree/services/bus.js"></script>
     </body>
 </html>
